tests/errors/syn_cases3.java
public class syn_cases3 {
public static void main(String[] args){
switch(args.length){
53 return 32;
}
}
}